feat: credentials get api
